CSS issues, but the network creation GUI is visible now.

--- a/NetworkSIM/public/stylesheets/dashboard.css
+++ b/NetworkSIM/public/stylesheets/dashboard.css
@@ -5,6 +5,7 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
+  padding-left: 120px;
 }
 
 
@@ -73,6 +74,7 @@ td {
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
+   max-width: 200px; 
   }
 }
 
@@ -81,6 +83,7 @@ td {
   margin-right: -21px; /* 20px padding + 1px border */
   margin-bottom: 20px;
   margin-left: -20px;
+   max-width: 200px; 
 }
 .nav-sidebar > li > a {
   padding-right: 20px;
@@ -99,7 +102,7 @@ td {
  */
 
 .main {
-  padding: 20px;
+ 
 }
 @media (min-width: 768px) {
   .main {
