--- a/NetworkSIM/public/stylesheets/topologyView.css
+++ b/NetworkSIM/public/stylesheets/topologyView.css
@@ -3,6 +3,8 @@ svg {
   height: 800px;
   border-style: solid;
   border-width: 1px;
+	position: relative;
+	left: -20px;
 }
 .viable-partition{
 	fill:red;
